--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 stanhf = "stanhf:cli"
 
 [tool.setuptools.package-data]
-stanhf = ["stanhf.stanfunctions", "extern.hpp"]
+stanhf = ["stanhf.stanfunctions"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
