fix ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 *pyc
-src/stanhf.egg-info
-src/__pycache__
-build
-examples/__pycache__
-examples/example
-examples/example.stan
-examples/example_data.json
-examples/example_init.json
-examples/model
-examples/model.stan
-examples/model_data.json
-examples/model_init.json
-*hepdata*
+__pycache__/
+*hepdata*/
+*.egg-info
+build/
+examples/
+!examples/model.json
+!examples/test.json
