--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,7 @@ jobs:
         pip install .
     - name: Run
       run: |
-        stanhf examples/model.json
+        stanhf examples/normfactor.json
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
